# wfc-haskell

./: .gitignore  Makefile  README.md  stack.yaml  wfc.cabal
outputs/: checkerboard
src/: Entropy.hs  Main.hs  Patterns.hs  Point.hs  Render.hs  Stack.hs  Test.hs  Utils.hs  Wfc.hs  ~oldWfc
src/Patterns/: Internal.hs
test/: PatternsSpec.hs  RenderSpec.hs  TestUtils.hs  WfcSpec.hs
